--- a/discuss/web/static/css/app.css
+++ b/discuss/web/static/css/app.css
@@ -1,1 +1,12 @@
 /* This file is for your main application css. */
+
+.help-block {
+    color: red;
+    text-transform: capitalize;
+    margin-bottom: 10px;
+}
+
+.form-group {
+    position: relative;
+    margin-bottom: 25px;
+}
