--- a/discuss/web/templates/layout/app.html.eex
+++ b/discuss/web/templates/layout/app.html.eex
@@ -7,13 +7,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Discuss!</title>
+    <title>Discussions</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
   <body>
-    <nav class="teal">
+    <nav class="teal lighten-2">
       <div class="nav-wrapper container">
         <a href="/" class="brand-logo">Discussions</a>
       </div>
